--- a/public/templates/test1.html
+++ b/public/templates/test1.html
@@ -2,7 +2,9 @@
 	<div class='col-sm-{{colSize}} col-md-{{colSize}} col-lg-{{colSize}}'>
 		<button class='btn btn-primary' ng-click='modifyColSize()' ng-hide='searchBar'>SEARCH</button>
 		<button class='btn btn-primary' ng-click='modifyColSize()' ng-show='searchBar'>NEW CUSTOMER ENTRY</button><br>
-		<input type='text' placeholder='Search...'/ ng-show='searchBar'>
+		<div class='form-group'>
+			<input type='text' class='form-control' placeholder='Search...' ng-model="search.query" ng-show='searchBar'>
+		</div>
 		<h2 class='text-center'>Existing Customers</h2>
 		<div ng-repeat='customer in customers'>
 			<button class='btn btn-primary' ng-click='customerInfo = !customerInfo'>More Info</button>
@@ -13,18 +15,44 @@
 				<strong>City: </strong>{{customer.address.city}}, {{customer.address.state}}
 			</h4>
 			<div class='row' ng-if='customerInfo'>
+				<p>Entry was created at {{customer.createdAt | date:'medium'}}</p>
+				<p ng-if='customer.updatedAt'>Entry was last updated at {{customer.updatedAt | date:'medium'}}</p>
 				<form name='updateCustomerForm' ng-submit='updateCustomerForm.$valid && updateCustomer(customer)' novalidate>
-					First Name: <input type='text' ng-model='customer.firstName' ng-value='customer.firstName' required/>
-					Last Name: <input type='text' ng-model='customer.lastName' ng-value='customer.lastName' required/>
-					Email: <input type='email' ng-model='customer.email' ng-value='customer.email'/ required>
-					Phones: <input type='text' ng-model='customer.phones' ng-value='customer.phones'/ >
-					Street1: <input type='text' ng-model='customer.address.street1' ng-value='customer.address.street1'/ >
-					Street2: <input type='text' ng-model='customer.address.street2' ng-value='customer.address.street2'/ >
-					City: <input type='text' ng-model='customer.address.city' ng-value='customer.address.city'/ >
-					<input type='submit' value='Update' />
+					<div class='form-group'>
+						<label for='firstNameInput1'>First Name</label>
+						<input type='text' class='form-control' id='firstNameInput1' ng-model='customer.firstName' ng-value='customer.firstName' required/>
+					</div>
+					<div class='form-group'>
+						<label for='lastNameInput1'>Last Name</label>
+						<input type='text' class='form-control' id='lastNameInput1' ng-model='customer.lastName' ng-value='customer.lastName' required/>
+					</div>
+					<div class='form-group'>
+						<label for='emailInput1'>Email</label>
+						<input type='email' class='form-control' id='emailInput1' ng-model='customer.email' ng-value='customer.email'/ required>
+					</div>
+					<div class='form-group'>
+						<label for='phonesInput1'>Phones</label>	
+						<input type='text' class='form-control' id='phonesInput1' ng-model='customer.phones' ng-list ng-value='customer.phones'/ >
+					</div>
+					<div class='form-group'>
+						<label for='street1Input1'>Street1</label>	
+						<input type='text' class='form-control' id='street1Input1' ng-model='customer.address.street1' ng-value='customer.address.street1'/ >
+					</div>
+					<div class='form-group'>
+						<label for='street2Input1'>Street 2</label>
+						<input type='text' class='form-control' id='street2Input1' ng-model='customer.address.street2' ng-value='customer.address.street2'/ >
+					</div>	
+					<div class='form-group'>
+						<label for='cityInput1'>City</label>
+						<input type='text' class='form-control' id='cityInput1' ng-model='customer.address.city' ng-value='customer.address.city'/ >
+					</div>	
+					<div class='form-group'>
+						<label for='stateInput1'>State</label>
+						<input type='text' class='form-control' id='stateInput1' ng-model='customer.address.state' ng-value='customer.address.city'/ >	
+					</div>
+					<input type='submit' class='btn btn-success' value='Update' />
+					<button class='btn btn-danger' ng-click='deleteCustomer(customer._id, $index)'>Delete</button>
 				</form>
-				<button class='btn btn-default' ng-click='deleteCustomer(customer._id, $index)'>Delete</button>
-				<p>Entry was created at {{customer.createAt | date:'medium'}}</p>
 			</div>
 		</div>
 
@@ -43,16 +71,40 @@
 
 		</blockquote>
 		<form name='addCustomerForm' ng-submit='addCustomerForm.$valid && addCustomer(newCustomer)' novalidate>
-			First Name: <input type='text' ng-model='newCustomer.firstName' required/>
-			Last Name: <input type='text' ng-model='newCustomer.lastName' required/>
-			Email: <input type='email' ng-model='newCustomer.email' required/>
-			Phones: <input type='text' ng-model='newCustomer.phones'/>
-			Street 1: <input type='text' ng-model='newCustomer.address.street1'/>
-			Street 2: <input type='text' ng-model='newCustomer.address.street2'/>
-			City: <input type='text' ng-model='newCustomer.address.city'/>
-			State:
-			<input type='radio' value='product' ng-model='newCustomer.product' />
+			<div class='form-group'>
+				<label for='firstNameInput'>First Name</label>
+				<input type='text' class='form-control' id='firstNameInput' ng-model='newCustomer.firstName' required/>
+			</div>
+			<div class='form-group'>
+				<label for='lastNameInput'>Last Name</label>
+				<input type='text' class='form-control' id='lastNameInput' ng-model='newCustomer.lastName' required/>
+			</div>
+			<div class='form-group'>
+				<label for='emailInput'>Email</label>
+				<input type='email' class='form-control' id='emailInput' ng-model='newCustomer.email' required/>
+			</div>
+			<div class='form-group'>
+				<label for='phonesInput'>Phones</label>
+				<input type='text' class='form-control' id='phonesInput' ng-list ng-model='newCustomer.phones'/>
+			</div>
+			<div class='form-group'>
+				<label for='street1Input'>Street 1</label>
+					<input type='text' class='form-control' id='street1Input' ng-model='newCustomer.address.street1'/>
+			</div>
+			<div class='form-group'>
+				<label for='street2Input'>Street 2</label>
+				<input type='text' class='form-control' id='street2Input' ng-model='newCustomer.address.street2'/>
+			</div>
+			<div class='form-group'>
+				<label for='cityInput'>City</label>
+				<input type='text' class='form-control' id='cityInput' ng-model='newCustomer.address.city'/>
+			</div>
+			<div class='form-group'>
+				<label for='stateInput'>State</label>
+				<input type='text' class='form-control' id='stateInput' ng-model='newCustomer.address.state'/>
+			</div>
 			<input type='submit' value='Submit' />
 		</form>
+			<button ng-click='newCustomer = {}'>Reset</button>
 	</div>
 </div>
