--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,5 +1,7 @@
 .inline {
 		display: inline-block;
+		margin-left: 10px;
+		font-size: 16px;
 }
 .ng-invalid.ng-dirty {
 	border-color: #FA787E;
@@ -10,4 +12,34 @@
 
 .background-orange {
 	background-color: #f8be78;
+	padding-top: 30px;
+	padding-bottom: 30px;
+	margin-top: 0px;
+	margin-bottom: 0px;
+	color: #ffffff;
+}
+
+#searchToggle {
+	margin-bottom: 20px;
+}
+
+.updatedInfo {
+	margin-top: 15px;
+	font-size: 16px;
+}
+#updateForm {
+	margin-bottom: 30px;
+}
+
+.borderBottom {
+	border: 1px solid;
+	border-bottom: 1px;
+}
+.marginBottom {
+	margin-bottom: 10px;
+	margin-top: 10px;
+}
+
+.alert-success {
+	margin-top: 15px;
 }
